# sales_forecasting

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
app/: config.py  data_preparation.py  inference.py  train.py  utils.py
noteboooks/: Forecasting model.ipynb  initial_model.py
tests/: test_data_preparation.py  test_inference.py  test_train.py  test_utils.py
