[tool.poetry]
name = "sales-forecasting"
version = "0.1.0"
description = ""
authors = ["Batul Bombaywala <blutab@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.24"
scikit-learn = "^1.5.1"
mlflow = "^2.15.1"
setuptools = "^74.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
